--- a/config.ex.json
+++ b/config.ex.json
@@ -1,8 +1,14 @@
 {
-    "DEPLOYING_USER": "deployer",
-    "DOCKER_PHP_CONTAINER": "php-fpm-8-2",
-    "PROJECT_PATHS": {
-        "tracker_dev": "/path/to/dev/tracker",
-        "tracker_local": "/path/to/local/tracker"
+    "deploying_user": "deployer",
+    "projects": {
+        "tracker-dev": {
+            "path": "/path/to/project1",
+            "branch": "develop",
+            "container": "php-fpm-container1"
+        },
+        "discord-bot-dev": {
+            "path": "/path/to/project2",
+            "branch": "develop"
+        }
     }
 }
